# roc-law-corpus

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
src/roc_law_corpus/: cli.py  julia_deps.py
src/roc_law_corpus/judicial_yuan/: clean.py  scraping.py
src/roc_law_corpus/moex/: extract.py  scraping.py
